--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body {
 
 
 .main-container {
-    margin-top: 4rem;   
+    margin-top: 4rem; 
+    margin-bottom: 4rem;  
 }
 
 .profile-view {
@@ -95,6 +96,7 @@ body {
     width: 36rem;
     height: 40rem;
     background-color: rgb(255, 139, 139);
+    border-radius: 1rem;
 }
 
 .catalogs img {
@@ -120,6 +122,7 @@ body {
     width: 49rem;
     height: 25rem;
     background-color: rgb(255, 139, 240);
+    border-radius: 1rem;
 }
 
 .flyer-content {
@@ -135,7 +138,8 @@ body {
 .logotypes {
     width: 12rem;
     height: 40rem;
-    background-color: rgb(255, 193, 112);
+    background-color: rgb(218, 146, 146);
+    border-radius: 1rem;
 }
 
 .logotype-content {
@@ -235,6 +239,7 @@ body {
     width: 11rem;
     height: 11rem;
     background-color: rgba(155, 240, 200, 0.685);
+    border-radius: 1rem;
 }
 
 .education-info {
@@ -261,6 +266,7 @@ body {
     width: 24rem;
     height: 24rem;
     background-color: rgba(180, 89, 111, 0.685);
+    border-radius: 1rem;
 }
 
 .employment-info {
@@ -272,6 +278,7 @@ body {
     width: 24rem;
     height: 24rem;
     background-color: rgba(170, 123, 135, 0.685);
+    border-radius: 1rem;
 }
 
 .internship-info {
@@ -291,11 +298,32 @@ body {
     padding-top: 1rem;   
 }
 
+.main-info-interests img {
+    width: 6rem;
+}
+
+.main-info-interests .material-icons {
+    margin: 0.2rem;
+}
+
+/*.main-info-interests p {
+    transform: rotate(-90deg);
+}*/
+
 .main-info-references {
     border-top: 0.1rem solid black;
     padding-top: 1rem;
-        
+    
 }
+
+.main-info-references div {
+    margin: 0.6rem;
+    width: 23rem;    
+    background-image: url('./Assets/citat.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 
 h1 {
     font-family: 'Rock Salt', cursive;
