--- a/style.css
+++ b/style.css
@@ -24,9 +24,14 @@ body {
     /*height: 35rem;*/
     width: 20rem;
     margin-right: 2rem;
+    position: relative;
     
 
     /*margin: 1rem;*/
+}
+
+.fixed-profile {
+    position: fixed;
 }
 
 .heading-info {
@@ -325,6 +330,7 @@ body {
 .main-info-references {
     border-top: 0.1rem solid black;
     padding-top: 1rem;
+    margin-bottom: 30rem;
     
 }
 
@@ -400,6 +406,31 @@ p {font-family: Verdana, Geneva, Tahoma, sans-serif; }
     margin-bottom: 1rem;
 }
 
+.main-info-interests h3 {
+    background-color: red;
+    border-radius: 10rem;
+    width: 4rem;
+    height: 4rem;
+    color: rgb(238, 130, 238);
+    margin-right: 1rem;
+    font-size: 3rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+}
+
+.main-info-interests div {
+    margin-bottom: 1rem;
+    background-color: rgba(238, 130, 238, 0.253);
+    border-radius: 1rem;
+    padding: 1rem;
+}
+
+.main-info-interests p {
+    
+    width: 7rem;
+    text-align: center;
+    color: red;
+}
 
 
 
@@ -416,7 +447,7 @@ p {font-family: Verdana, Geneva, Tahoma, sans-serif; }
 
 
 /* Media Queries */
-@media all and (max-width: 1000px) {
+@media all and (max-width: 1200px) {
 
     main {
         padding: 1rem;
@@ -426,6 +457,10 @@ p {font-family: Verdana, Geneva, Tahoma, sans-serif; }
     
         position: initial;
         
+    }
+
+    .fixed-profile {
+        position: inherit;
     }
 
     .navigations {
@@ -481,6 +516,7 @@ p {font-family: Verdana, Geneva, Tahoma, sans-serif; }
 
     .flyers {
         width: 36rem;
+        
     }
 
     .flyer-content img {
@@ -493,6 +529,20 @@ p {font-family: Verdana, Geneva, Tahoma, sans-serif; }
     }  
     
       .flyers .overlay {
+        width: 36rem;
+    }
+
+    .logotypes {
+        width: 36rem;
+        height: 20rem;
+    }
+
+    .logotype-content {
+        width: 36rem;
+        height: 20rem;
+    }
+
+    .logotypes .overlay {
         width: 36rem;
     }
     
@@ -541,6 +591,20 @@ p {font-family: Verdana, Geneva, Tahoma, sans-serif; }
     }  
     
       .catalogs .overlay {
+        width: 24rem;
+    }
+
+    .logotypes {
+        width: 24rem;
+        height: 20rem;
+    }
+
+    .logotype-content {
+        width: 24rem;
+        height: 20rem;
+    }
+
+    .logotypes .overlay {
         width: 24rem;
     }
     
@@ -614,6 +678,20 @@ p {font-family: Verdana, Geneva, Tahoma, sans-serif; }
     }  
     
       .internships .overlay {
+        width: 18rem;
+    }
+
+    .logotypes {
+        width: 18rem;
+        height: 20rem;
+    }
+
+    .logotype-content {
+        width: 18rem;
+        height: 20rem;
+    }
+
+    .logotypes .overlay {
         width: 18rem;
     }
     
